tests/negative/generics/generic_method_arity_zero_vs_one.orng
// generic_method_arity_zero_vs_one.orng:11:7: error: trait `Foo` specifies 1 generic parameter for method `f`, got 0
//     fn f(self, x: Int) -> Int {
//      ^
// 
trait Foo {
    fn f[T](self, x: T) -> T
}

struct Box {}
impl Foo for Box {
    fn f(self, x: Int) -> Int {
        _ = self
        x
    }
}

fn main() -> Int { 3 }